feat(parser): extend LL(1) Parser & tests - Add expressions, statements, branches, cycles - Add unit-tests to parser - Add lexer-parser e2e tests